fix 🐛: Update CI and tests (#377)
* fix 🐛: use stable version of storybook
* fix: 🎨 scrollbars on chrome/windows
  There is a very strange and ugly scrollbar on
  windows...
  This commit styles it according to the theme,
  check the PR body for screenshots of before/after
* fix 🐛: Banner style on mobile
  still looks a bit sketchy but less than currently
* ci 🤖: renamed jobs for easier testing
* ci 🤖: add a new workflow
  to do visual comparison from two commits (WIP)
* chore 🧹: remove FUNDING

not working for org and we can't accept it anyway

--- a/src/components/banners/index.module.scss
+++ b/src/components/banners/index.module.scss
@@ -24,16 +24,22 @@
   top: 0;
   color: var(--background-color);
   a {
-    font-size: $font-small;
+    font-size: $font-xsmall;
+    @include respond-to('desktop') {
+      font-size: $font-small;
+    }
   }
   h2 {
-    font-size: $font-large;
+    font-size: $font-small;
+    @include respond-to('desktop') {
+      font-size: $font-large;
+    }
   }
 }
 .close {
   position: absolute;
   top: 13px;
-  right: 15px;
+  right: 20px;
 }
 .content {
   display: flex;
@@ -41,8 +47,12 @@
   align-items: center;
   height: 100%;
   width: 100%;
-  max-width: var(--max-width-internal);
-
+  padding-right: 32px;
+  max-width: 100%;
+  @include respond-to('phone') {
+    /*width: 50%;*/
+    max-width: var(--max-width-internal);
+  }
   @include respond-to('desktop') {
     /*width: 50%;*/
     margin: 0 auto;
