--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,21 @@ body {
   line-height: 150%;
   width: 100%;
 }
+
+body::-webkit-scrollbar {
+  width: 0.25em;
+}
+body::-webkit-scrollbar-track {
+  background-color: var(--gray-25);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: var(--text-color);
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: var(--gray-10);
+}
+
 #root {
   display: flex;
   flex-direction: column;
